--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
-matplotlib ==3.5.0
-xarray ==0.20.1
-
+cycler==0.11.0
+fonttools==4.28.5
+kiwisolver==1.3.2
+matplotlib==3.5.1
+numpy==1.22.0
+packaging==21.3
+Pillow==9.0.0
+pyparsing==3.0.6
+python-dateutil==2.8.2
+ruamel.yaml==0.17.20
+ruamel.yaml.clib==0.2.6
+six==1.16.0
