--- a/src/main/yaml/failScenario.yml
+++ b/src/main/yaml/failScenario.yml
@@ -17,12 +17,6 @@ variables:
   candidate_in_hysteresis: &candidate_in_hysteresis
     type: ArbitraryVariable
     parameters: [ 3, [ 3, 5, 7 ] ]
-  fail_frequency: &fail_frequency
-    type: ArbitraryVariable
-    parameters: [ 0.1, [ 0.001, 0.1, 0.5 ] ]
-  new_node_frequency: &new_node_frequency
-    type: ArbitraryVariable
-    parameters: [ 0.1, [ 0.001, 0.1, 0.5 ] ]
   ##### UNUSED => used only for configuring multiple simulations
   speed: &speed
     type: ArbitraryVariable
@@ -30,6 +24,13 @@ variables:
   explore_area: &explore_area
     type: ArbitraryVariable
     parameters: [ 0.0, [ 0.0 ] ]
+  #### Fail values
+  fail_frequency: &fail_frequency
+    type: ArbitraryVariable
+    parameters: [ 0.1, [ 0.001, 0.1, 0.5 ] ]
+  new_node_frequency: &new_node_frequency
+    type: ArbitraryVariable
+    parameters: [ 0.1, [ 0.001, 0.1, 0.5 ] ]
 
 _constants:
   connection_range: &connection_range 1
